<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/blue_overlay">


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:gravity="center"
        android:orientation="vertical">

        <android.support.v7.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
            android:id="@+id/card_view"
            style="@style/CardViewStyle"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="30dp">

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="20dp">

                <LinearLayout
                    android:id="@+id/layout_login_area"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true"
                    android:orientation="vertical">

                    <android.support.design.widget.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <EditText
                            android:id="@+id/text_id"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/prompt_id"
                            android:inputType="textEmailAddress"
                            android:maxLength="64"
                            />
                    </android.support.design.widget.TextInputLayout>

                    <android.support.design.widget.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <EditText
                            android:id="@+id/text_pw"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/prompt_password"
                            android:imeActionId="@+id/login"
                            android:imeActionLabel="@string/action_sign_in_short"
                            android:imeOptions="actionDone"
                            android:inputType="textPassword"
                            android:maxLength="32"
                            android:maxLines="1"
                            android:singleLine="true" />

                    </android.support.design.widget.TextInputLayout>

                    <LinearLayout
                        android:id="@+id/layout_otp_code"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_alignParentLeft="true"
                        android:layout_alignParentStart="true"
                        android:orientation="horizontal">

                        <android.support.design.widget.TextInputLayout
                            android:layout_width="0dip"
                            android:layout_height="wrap_content"
                            android:layout_weight="1">

                            <EditText
                                android:id="@+id/text_otp_code"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:hint="@string/prompt_otp_code"
                                android:imeActionId="@+id/login"
                                android:imeActionLabel="@string/action_sign_in_short"
                                android:imeOptions="actionDone"
                                android:inputType="numberSigned"
                                android:maxLength="6"
                                android:maxLines="1"
                                android:singleLine="true" />

                        </android.support.design.widget.TextInputLayout>
                        <Button
                            android:id="@+id/btn_otp_code"
                            android:layout_width="120dip"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="10dp"
                            android:background="@drawable/selector_btn_default"
                            android:text="@string/prompt_get_code"
                            android:textColor="@color/colorAccentDark"
                            android:textSize="@dimen/font_large"
                            android:textStyle="bold" />
                    </LinearLayout>

                    <CheckBox
                        android:id="@+id/chk_save_id"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/save_userid"
                        android:layout_marginTop="10dip"
                        android:layout_marginBottom="10dip"
                        android:checked="true"
                        />
                    <Button
                        android:id="@+id/btn_login"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:background="@drawable/selector_btn_stroke_teal"
                        android:text="@string/login"
                        android:textColor="@color/colorAccentDark"
                        android:textSize="@dimen/font_large"
                        android:textStyle="bold" />


                </LinearLayout>


            </RelativeLayout>
        </android.support.v7.widget.CardView>

    </LinearLayout>
</RelativeLayout>


